@@ -156,7 +156,7 @@ namespace DiscImageChef.Commands
                                 if(plugins.PluginsList.TryGetValue(plugin_name, out _plugin))
                                 {
                                     DicConsole.WriteLine(string.Format("As identified by {0}.", _plugin.Name));
-                                    Filesystem fs = (Filesystem)_plugin.GetType().GetConstructor(new Type[] { typeof(ImagePlugin), typeof(ulong), typeof(ulong), typeof(System.Text.Encoding) }).Invoke(new object[] { _imageFormat, partitions[i].Start, partitions[i].Start + partitions[i].Length, null });
+                                    Filesystem fs = (Filesystem)_plugin.GetType().GetConstructor(new Type[] { typeof(ImagePlugin), typeof(Partition), typeof(System.Text.Encoding) }).Invoke(new object[] { _imageFormat, partitions[i], null });
 
                                     error = fs.Mount(options.Debug);
                                     if(error == Errno.NoError)
@@ -182,7 +182,7 @@ namespace DiscImageChef.Commands
                         {
                             plugins.PluginsList.TryGetValue(id_plugins[0], out _plugin);
                             DicConsole.WriteLine(string.Format("Identified by {0}.", _plugin.Name));
-                            Filesystem fs = (Filesystem)_plugin.GetType().GetConstructor(new Type[] { typeof(ImagePlugin), typeof(ulong), typeof(ulong), typeof(System.Text.Encoding) }).Invoke(new object[] { _imageFormat, partitions[i].Start, partitions[i].Start + partitions[i].Length, null });
+                            Filesystem fs = (Filesystem)_plugin.GetType().GetConstructor(new Type[] { typeof(ImagePlugin), typeof(Partition), typeof(System.Text.Encoding) }).Invoke(new object[] { _imageFormat, partitions[i], null });
                             error = fs.Mount(options.Debug);
                             if(error == Errno.NoError)
                             {
@@ -223,7 +223,7 @@ namespace DiscImageChef.Commands
                         if(plugins.PluginsList.TryGetValue(plugin_name, out _plugin))
                         {
                             DicConsole.WriteLine(string.Format("As identified by {0}.", _plugin.Name));
-                            Filesystem fs = (Filesystem)_plugin.GetType().GetConstructor(new Type[] { typeof(ImagePlugin), typeof(ulong), typeof(ulong), typeof(System.Text.Encoding) }).Invoke(new object[] { _imageFormat, (ulong)0, _imageFormat.GetSectors() - 1, null });
+                            Filesystem fs = (Filesystem)_plugin.GetType().GetConstructor(new Type[] { typeof(ImagePlugin), typeof(Partition), typeof(System.Text.Encoding) }).Invoke(new object[] { _imageFormat, wholePart, null });
                             error = fs.Mount(options.Debug);
                             if(error == Errno.NoError)
                             {
@@ -248,7 +248,7 @@ namespace DiscImageChef.Commands
                 {
                     plugins.PluginsList.TryGetValue(id_plugins[0], out _plugin);
                     DicConsole.WriteLine(string.Format("Identified by {0}.", _plugin.Name));
-                    Filesystem fs = (Filesystem)_plugin.GetType().GetConstructor(new Type[] { typeof(ImagePlugin), typeof(ulong), typeof(ulong), typeof(System.Text.Encoding) }).Invoke(new object[] { _imageFormat, (ulong)0, _imageFormat.GetSectors() - 1, null });
+                    Filesystem fs = (Filesystem)_plugin.GetType().GetConstructor(new Type[] { typeof(ImagePlugin), typeof(Partition), typeof(System.Text.Encoding) }).Invoke(new object[] { _imageFormat, wholePart, null });
                     error = fs.Mount(options.Debug);
                     if(error == Errno.NoError)
                     {
